--- a/critique/app/ui/app.kv
+++ b/critique/app/ui/app.kv
@@ -230,11 +230,18 @@
                     display.camera = '1'
             
             Button:
-                text: 'test_sp'
+                text: 'ohsp'
                 size_hint: None, None
                 size: 75, 40
                 on_press:
                     display.camera = 'ohsp.mp4'
+            
+            Button:
+                text: 'bwswt'
+                size_hint: None, None
+                size: 75, 40
+                on_press:
+                    display.camera = 'bwsqt.mp4'
             
             Button:
                 text: 'shoulder_press'
