--- a/critique/app/ui/app.kv
+++ b/critique/app/ui/app.kv
@@ -1,11 +1,13 @@
 #:kivy 1.11
 #:import settings critique.settings
+#:import os os
 
 <Widget>:
     # canvas:
     #     Rectangle:
     #         size: 2, 2
     #         pos: self.pos
+    font_name: 'critique/app/assets/fonts/HelveticaNeue Medium.ttf'
 
 
 <MenuScreen>:
@@ -18,6 +20,7 @@
             color: 1, 1, 1, 1
             background_color: 1, 1, 1, 0.2
             on_press:
+                print(os.path.abspath(os.path.dirname('.')))
                 root.connect()
 
         RelativeLayout:
