--- a/critique/app/ui/app.kv
+++ b/critique/app/ui/app.kv
@@ -9,8 +9,13 @@
     #         pos: self.pos
     font_name: 'critique/app/assets/fonts/HelveticaNeue Medium.ttf'
 
-
 <MenuScreen>:
+    canvas:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: 'critique/app/assets/menu-imgs/menu-2.jpg'
+
     FloatLayout:
         Button:
             text: 'Refresh Session'
@@ -18,93 +23,43 @@
             size: 150, 40
             border: 0, 0, 0, 0
             color: 1, 1, 1, 1
-            background_color: 1, 1, 1, 0.2
+            background_color: 1, 1, 1, 0.7
             on_press:
-                print(os.path.abspath(os.path.dirname('.')))
                 root.connect()
+        
+        Button:
+            text: 'Start'
+            size_hint: None, None
+            x: 150
+            size: 150, 40
+            border: 0, 0, 0, 0
+            color: 1, 1, 1, 1
+            background_color: 1, 1, 1, 0.7
+            on_press:
+                root._transition_to_display()
+            
+        AnchorLayout:
+            anchor_x: 'center'
+            anchor_y: 'center'
 
-        RelativeLayout:
-            id: panel
-            size_hint_x: 0.6
-            size_hint_y: 0.5
-            pos_hint: { 'center_x': 0.5, 'center_y': 0.5 }
+            SessionKeyLabel:
+                id: session_key_label
+                size_hint: 1.0, None
+                color: 1, 1, 1, 1
+                font_size: 600
+                pos_hint: { 'center_x': 0.5 }
+        
+        AnchorLayout:
+            anchor_x: 'left'
+            anchor_y: 'top'
 
-            canvas.before:
-                Color:
-                    rgb: 1, 1, 1
-                    a: 0.25
-                RoundedRectangle:
-                    size: self.size
-
-            AnchorLayout:
-                anchor_x: 'center'
-                anchor_y: 'top'
-
-                Label:
-                    text: "[b]LIFTR[/b] [color=#000000]train[/color]"
-                    markup: True
-                    height: 150
-                    size_hint: 1.0, None
-                    color: 208/255, 0, 0, 1
-                    font_size: 81
-                    pos_hint: { 'center_x': 0.5 }
-
-            AnchorLayout:
-                anchor_x: 'center'
-                anchor_y: 'center'
-
-                SessionKeyLabel:
-                    id: session_key_label
-                    markup: True
-                    height: 150
-                    size_hint: 1.0, None
-                    color: 0, 0, 0, 1
-                    font_size: 32
-                    pos_hint: { 'center_x': 0.5 }
-
-            AnchorLayout:
-                anchor_x: 'center'
-                anchor_y: 'bottom'
-
-                BoxLayout:
-                    orientation: 'horizontal'
-                    spacing: 10
-                    width: 310
-                    size_hint: None, None
-                    padding: 0, 30
-
-                    Button:
-                        text: 'Start'
-                        size_hint: None, None
-                        size: 150, 40
-                        border: 0, 0, 0, 0
-                        color: 0, 0, 0, 1
-                        background_color: 0, 0, 0, 0
-                        canvas.before:
-                            Color: 
-                                rgb: 208/255, 0, 0
-                            RoundedRectangle:
-                                size: self.size
-                                pos: self.pos
-                        on_press:
-                            root._transition_to_display()
-
-                    Button:
-                        text: 'About'
-                        size_hint: None, None
-                        size: 150, 40
-                        border: 0, 0, 0, 0
-                        color: 0, 0, 0, 1
-                        background_color: 1, 1, 1, 0
-                        canvas.before:
-                            Color: 
-                                rgb: 208/255, 0, 0
-                            RoundedRectangle:
-                                size: self.size
-                                pos: self.pos
-                        on_press:
-                            root.manager.transition.direction = 'up'
-                            root.manager.current = 'about'
+            Label:
+                text: "[color=#D00000]LIFTR[/color] [color=#FFFFFF]train[/color]"
+                markup: True
+                size_hint: None, None
+                size: self.texture_size
+                font_size: 81
+                font_name: 'critique/app/assets/fonts/HelveticaNeueHv.ttf'
 
 <AboutScreen>:
     FloatLayout:
