--- a/critique/app/ui/app.kv
+++ b/critique/app/ui/app.kv
@@ -87,18 +87,17 @@
                     font_size: 36
                     font_name: 'critique/app/assets/fonts/HelveticaNeue Light.ttf'
                 
-                Widget:
-                    canvas:
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-                            source: 'critique/app/assets/weather-icons/cloudy.png'
-                    size: 40, 40
-                    size_hint: None, None
+                # Widget:
+                #     canvas:
+                #         Rectangle:
+                #             size: self.size
+                #             pos: self.pos
+                #             source: 'critique/app/assets/weather-icons/cloudy.png'
+                #     size: 40, 40
+                #     size_hint: None, None
                 
                 Label:
                     id: weather_label
-                    text: "23°C"
                     markdown: True
                     size_hint: None, None
                     size: self.texture_size
