add title and selected workout label

--- a/critique/app/screens/menu_screen.kv
+++ b/critique/app/screens/menu_screen.kv
@@ -57,6 +57,7 @@
                 size_hint: None, None
                 size: self.texture_size
                 font_size: 81
+                padding_x: 10
                 font_name: 'critique/app/assets/fonts/HelveticaNeueHv.ttf'
 
         AnchorLayout:
