--- a/critique/app/screens/display_screen.kv
+++ b/critique/app/screens/display_screen.kv
@@ -4,6 +4,13 @@
 #:import os os
 
 <DisplayScreen>:
+    canvas:
+        Color:
+            rgb: 0, 0, 0
+        Rectangle:
+            size: self.size
+            pos: self.pos
+
     FloatLayout:
         Label:
             id: error_label
@@ -106,11 +113,11 @@
                 size: self.texture_size[0] + 20, 40
                 size_hint: None, None
 
-            Label:
-                id: workout_label
-                text: ""
-                size: 150, 40
-                size_hint: None, None
+            # Label:
+            #     id: workout_label
+            #     text: ""
+            #     size: 150, 40
+            #     size_hint: None, None
             
             Label:
                 text: "Started:"
@@ -156,6 +163,38 @@
                 size: 30, 40
                 size_hint: None, None
 
+    AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'top'
+
+        StackLayout:
+            orientation: 'tb-lr'
+            canvas:
+                Color:
+                    rgb: 0, 0, 0
+                    a: 0.3
+                Rectangle:
+                    size: 470, 130
+                    pos: 0, self.top-130
+
+            Label:
+                text: "[color=#D00000]LIFTR[/color] [color=#FFFFFF]train[/color]"
+                markup: True
+                size_hint: None, None
+                size: self.texture_size
+                font_size: 62
+                padding_x: 10
+                font_name: 'critique/app/assets/fonts/HelveticaNeueHv.ttf'
+            
+            Label:
+                id: workout_label
+                text: "Select workout on device"
+                markup: True
+                size_hint: None, None
+                size: self.texture_size
+                font_size: 38
+                padding_x: 10
+
     # Overlay
     FloatLayout:
 
@@ -166,6 +205,7 @@
             FloatLayout:
                 id: workout_select_info_box
                 size_hint: 0.8, 0.8
+                opacity: 0
                 canvas:
                     Color:
                         rgb: 0, 0, 0
@@ -179,8 +219,9 @@
                 font_size: 32
                 text_size: (workout_select_info_box.size[0], None)
                 padding_x: 100
+                opacity: 0
                 halign: 'center'
-                text: "Please use your mobile device to select an exercise."
+                text: ""
 
             FloatLayout:
                 id: count_down_box
